# trueguard-plugin

./: LICENSE.md  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/aravi/firewall/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/me/aravi/firewall/: App.kt  MainActivity.kt  TrueguardService.kt
app/src/main/java/me/aravi/firewall/beans/: Allowed.kt  Packet.java  ResourceRecord.java  Usage.java
app/src/main/jni/trueguard/: dhcp.c  dns.c  icmp.c  ip.c  pcap.c  session.c  tcp.c  trueguard.c  trueguard.h  udp.c  util.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/me/aravi/firewall/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
